# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("js") {
  # Meta-target, don't link into production code.
  testonly = true
  deps = [
    ":js_content_handler",
  ]
}

source_set("mojo_runner") {
  sources = [
    "mojo_runner_delegate.cc",
    "mojo_runner_delegate.h",
  ]

  public_deps = [
    "//mojo/edk/js",
  ]
  deps = [
    "//base",
    "//gin",
    "//mojo/apps/js/bindings",
    "//mojo/apps/js/bindings/gl",
    "//v8",
  ]
}

source_set("js_apps") {
  sources = [
    "js_app.cc",
    "mojo_bridge_module.cc",
  ]

  public_deps = [
    "//mojo/edk/js",
  ]
  deps = [
    ":mojo_runner",
    "//mojo/application",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/utility",
  ]
}

shared_library("js_content_handler") {
  sources = [
    "content_handler_main.cc",
  ]

  deps = [
    ":js_apps",
    "//base:i18n",
    "//mojo/application:application",
    "//mojo/application:content_handler",
    "//mojo/environment:chromium",
    "//mojo/services/public/interfaces/content_handler",
  ]
}
