# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("clipboard") {
  sources = [
    "clipboard_standalone_impl.cc",
    "clipboard_standalone_impl.h",
    "main.cc",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/common",
    "//mojo/environment:chromium",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/bindings",
    "//mojo/services/public/interfaces/clipboard",
    "//ui/base",
  ]
}

test("clipboard_unittests") {
  sources = [
    "clipboard_standalone_unittest.cc",
  ]

  deps = [
    "//base",
    "//base/test:run_all_unittests",
    "//base/test:test_support",
    "//mojo/application",
    "//mojo/application_manager",
    "//mojo/common",
    "//mojo/edk/system",
    "//mojo/environment:chromium",
    "//mojo/services/public/interfaces/clipboard:clipboard",
    "//mojo/shell:test_support",
    "//testing/gtest",
  ]
}
