# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("surfaces") {
  output_name = "surfaces_service"
  sources = [
    "surfaces_impl.cc",
    "surfaces_impl.h",
    "surfaces_service_application.cc",
    "surfaces_service_application.h",
    "surfaces_service_impl.cc",
    "surfaces_service_impl.h",
  ]

  deps = [
    "//base",
    "//cc",
    "//cc/surfaces",
    "//ui/gfx/geometry",
    "//mojo/application",
    "//mojo/cc",
    "//mojo/converters/geometry",
    "//mojo/converters/surfaces",
    "//mojo/environment:chromium",
    "//mojo/public/c/system:for_shared_library",
    "//mojo/public/cpp/bindings",
    "//mojo/public/gles2:for_shared_library",
    "//mojo/services/public/interfaces/geometry",
    "//mojo/services/public/interfaces/gpu",
    "//mojo/services/public/interfaces/surfaces",
  ]
}
